v/0.8.0/_sources/examples/08_distributed_manager.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/08_distributed_manager.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_08_distributed_manager.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_08_distributed_manager.py:


Distributed Manager Inference
=============================

Setting up distributed manager for parallel inference.

Many inference workflows are embarrassingly parallel and can be easily sharded across
multiple devices.
This example demonstrates how one can use the PhysicsNeMo distributed manager to distribute
inference across mutliple GPUs.
The `distributed manager <https://github.com/NVIDIA/physicsnemo/blob/main/physicsnemo/distributed/manager.py>`_
is a utility that provides a useful set of properties that pertain to a parallel
environment.

In this example you will learn:

- How to use the distributed manager to access parallel environment properties
- Parallelize deterministic inference across multiple initial date-times
- Limitations of parallel inference in Earth2Studio
- Post-processing strategies of parallel job outputs

.. GENERATED FROM PYTHON SOURCE LINES 41-60

Set Up
------
Set up the distributed manager by initializing it. Out of the box, the distributed
manager supports MPI, SLURM and PyTorch parallel environments which provide information
regarding the parallel enviroment but environment variables.

For example, this script could be ran using:

.. code-block:: bash

  # OpenMPI
  mpirun -np 2 python 08_distributed_manager.py
  # Torch run
  torchrun --standalone --nnodes=1 --nproc-per-node=2 08_distributed_manager.py

.. warning::

  When running in parallel, make sure the .env file in the repository examples
  folder is *not* present. The .env file is intended for the documentation build only.

.. GENERATED FROM PYTHON SOURCE LINES 62-83

.. code-block:: Python

    import os

    os.makedirs("outputs", exist_ok=True)
    from dotenv import load_dotenv

    load_dotenv()  # TODO: make common example prep function

    import numpy as np
    import torch
    from loguru import logger
    from physicsnemo.distributed import DistributedManager

    DistributedManager.initialize()  # Only call this once in the entire script!
    dist = DistributedManager()
    assert (  # noqa: S101
        dist._distributed
    ), "Looks like torch distributed isn't set up. Check your env variables!"

    logger.info(
        f"Inference runner {dist.rank} of {dist.world_size} with device {dist.device}"
    )




.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2025-06-12 13:32:29.490 | INFO     | __main__:<module>:80 - Inference runner 0 of 1 with device cuda:0




.. GENERATED FROM PYTHON SOURCE LINES 84-88

Next the needed components get initialized.
Rigorous parallel support is not part of Earth2Studio's design goals, there are some
spots where potential race conditions can occur. Thus some additional care should be
taken to ensure safe parallel inference.

.. GENERATED FROM PYTHON SOURCE LINES 90-103

.. code-block:: Python

    from earth2studio.data import WB2ERA5
    from earth2studio.io import ZarrBackend
    from earth2studio.models.px import DLWP

    # Load model
    package = DLWP.load_default_package()
    if dist.rank == 0:
        model = DLWP.load_model(package)

    torch.distributed.barrier()
    if dist.rank != 0:
        model = DLWP.load_model(package)








.. GENERATED FROM PYTHON SOURCE LINES 104-111

When loading models that are built into Earth2Studio, the model's checkpoint files
will be downloaded into the machines cache. If each inference process has access to
the same cache location, then only one should download the checkpoint triggered by
:py:func:`load_model`.

Here :py:class:`earth2studio.models.px.DLWP` checkpoint files are first downloaded by
process 0 and then loaded by other processes.

.. GENERATED FROM PYTHON SOURCE LINES 113-117

.. code-block:: Python


    # Create the data source
    data = WB2ERA5()








.. GENERATED FROM PYTHON SOURCE LINES 118-121

The remote date store will place cached data into separate caches for each process.
This makes the download of initial state data safe during parallel inference but also
means that multiple jobs will download the same date-time if needed.

.. GENERATED FROM PYTHON SOURCE LINES 123-130

.. code-block:: Python

    chunks = {"time": 1, "lead_time": 1}
    io = ZarrBackend(
        file_name=f"outputs/08_output_{dist.rank}.zarr",
        chunks=chunks,
        backend_kwargs={"overwrite": True},
    )








.. GENERATED FROM PYTHON SOURCE LINES 131-141

Earth2Studio does not provide distributed IO support. The recommendation is to always
output data for each process to a separate file, then aggregate the data during post
processing.

Execute the Workflow
--------------------
Next we can run the workflow. This example will run inference for a random date across
several years and just save total column water vapor. Shard the initial date-times
across the each process. The distributed manager will provide the device ID for the
process.

.. GENERATED FROM PYTHON SOURCE LINES 143-160

.. code-block:: Python

    import earth2studio.run as run

    times = np.array([f"200{i:d}-06-01T00:00:00" for i in range(0, 6)])
    assert (  # noqa: S101
        len(times) > dist.world_size
    ), "Inference runs should be greater than processes"
    time_shard = np.array_split(times, dist.world_size)[dist.rank]

    nsteps = 20
    output_coords = {"variable": np.array(["tcwv"])}
    io = run.deterministic(
        time_shard, nsteps, model, data, io, output_coords=output_coords, device=dist.device
    )

    print(io.root.tree())
    torch.distributed.barrier()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2025-06-12 13:32:30.565 | INFO     | earth2studio.run:deterministic:75 - Running simple workflow!
    2025-06-12 13:32:30.565 | INFO     | earth2studio.run:deterministic:82 - Inference device: cuda:0
    2025-06-12 13:32:30.666 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/.zattrs to local cache
    2025-06-12 13:32:30.822 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/.zgroup to local cache
    2025-06-12 13:32:30.827 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/.zmetadata to local cache
    2025-06-12 13:32:31.008 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/level/0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.075 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: t2m at 2001-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.076 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: t850 at 2002-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.077 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: t2m at 2003-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.078 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z300 at 2005-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.079 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: t850 at 2003-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.081 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z700 at 2000-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.082 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z1000 at 2001-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.083 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: tcwv at 2003-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.084 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z700 at 2001-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.085 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z1000 at 2005-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.086 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: tcwv at 2000-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.087 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: tcwv at 2001-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.089 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z500 at 2003-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.090 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z1000 at 2003-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.091 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z1000 at 2002-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.093 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z1000 at 2000-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.094 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z500 at 2004-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.095 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z300 at 2002-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.096 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z700 at 2002-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.097 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: t2m at 2000-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.099 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: t2m at 2005-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.100 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z500 at 2005-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.102 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: tcwv at 2004-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.103 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: t2m at 2004-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.104 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z300 at 2003-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.105 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: t2m at 2002-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.106 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z300 at 2000-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.107 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z300 at 2004-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.108 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z700 at 2003-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.109 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z1000 at 2004-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.110 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: t850 at 2005-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.111 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: t850 at 2000-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.112 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: t850 at 2001-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.113 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z500 at 2002-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.114 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z700 at 2005-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.115 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: t850 at 2004-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.117 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: tcwv at 2002-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.121 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z500 at 2001-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.124 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z500 at 2000-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.127 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z300 at 2001-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.131 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: tcwv at 2005-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.133 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z700 at 2004-05-31T18:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.201 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/2m_temperature/61967.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.201 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/2m_temperature/64887.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.216 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/temperature/63427.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.224 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/temperature/64887.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.244 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/total_column_water_vapour/64887.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.252 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/temperature/66351.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.253 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/2m_temperature/66351.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.255 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/2m_temperature/67811.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.256 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/67811.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.258 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/60507.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.260 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/64887.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.260 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/61967.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.261 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/60507.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.261 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/64887.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.261 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/60507.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.262 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/61967.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.262 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/64887.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.263 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/67811.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.263 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/67811.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.264 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/61967.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.264 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/temperature/60507.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.264 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/2m_temperature/60507.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.265 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/67811.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.265 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/64887.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.272 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/temperature/61967.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.273 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/total_column_water_vapour/60507.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.273 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/2m_temperature/63427.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.276 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/temperature/67811.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.277 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/total_column_water_vapour/66351.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.278 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/total_column_water_vapour/67811.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.279 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/total_column_water_vapour/63427.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.281 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/66351.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.282 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/total_column_water_vapour/61967.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.284 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/63427.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.285 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/66351.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.286 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/66351.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.286 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/63427.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.287 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/61967.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.288 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/66351.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:31.318 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/60507.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]    Fetching WB2 data:   2%|▏         | 1/42 [00:00<00:10,  3.79it/s]                                                                     2025-06-12 13:32:31.342 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/63427.0.0.0 to local cache
    Fetching WB2 data:   2%|▏         | 1/42 [00:00<00:10,  3.79it/s]                                                                     2025-06-12 13:32:31.343 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/63427.0.0.0 to local cache
    Fetching WB2 data:   2%|▏         | 1/42 [00:00<00:10,  3.79it/s]    Fetching WB2 data:  19%|█▉        | 8/42 [00:00<00:01, 20.95it/s]    Fetching WB2 data:  26%|██▌       | 11/42 [00:00<00:01, 23.06it/s]    Fetching WB2 data:  33%|███▎      | 14/42 [00:01<00:04,  6.11it/s]    Fetching WB2 data:  45%|████▌     | 19/42 [00:01<00:02,  9.87it/s]    Fetching WB2 data:  52%|█████▏    | 22/42 [00:02<00:02,  7.02it/s]    Fetching WB2 data:  74%|███████▍  | 31/42 [00:02<00:00, 13.61it/s]    Fetching WB2 data:  83%|████████▎ | 35/42 [00:02<00:00, 15.46it/s]    Fetching WB2 data: 100%|██████████| 42/42 [00:03<00:00, 21.99it/s]    Fetching WB2 data: 100%|██████████| 42/42 [00:03<00:00, 13.89it/s]
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.102 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: t2m at 2001-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.102 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: t850 at 2004-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.103 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: t2m at 2003-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.103 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z300 at 2005-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.104 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: t850 at 2003-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.104 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z700 at 2000-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.105 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: t850 at 2002-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.106 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: tcwv at 2003-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.106 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z700 at 2001-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.107 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z1000 at 2005-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.107 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: tcwv at 2000-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.107 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: tcwv at 2001-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.108 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z500 at 2003-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.108 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z1000 at 2003-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.109 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: t850 at 2005-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.109 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z1000 at 2000-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.110 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z500 at 2004-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.110 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z300 at 2002-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.111 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z700 at 2002-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.111 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: t2m at 2000-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.112 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: t2m at 2005-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.112 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z500 at 2005-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.113 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: tcwv at 2004-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.113 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: t2m at 2004-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.114 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z300 at 2003-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.114 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: t2m at 2002-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.115 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z300 at 2000-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.115 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z300 at 2004-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.116 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z700 at 2003-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.116 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z1000 at 2004-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.117 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z1000 at 2002-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.117 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: t850 at 2000-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.118 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: t850 at 2001-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.118 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z500 at 2002-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.119 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z700 at 2005-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.119 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z1000 at 2001-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.120 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: tcwv at 2002-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.120 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z500 at 2001-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.121 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z500 at 2000-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.121 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z300 at 2001-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.122 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: tcwv at 2005-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.122 | DEBUG    | earth2studio.data.wb2:fetch_array:251 - Fetching WB2 zarr array for variable: z700 at 2004-06-01T00:00:00
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.171 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/2m_temperature/61968.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.174 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/63428.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.175 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/67812.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.176 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/2m_temperature/67812.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.176 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/64888.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.177 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/60508.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.177 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/2m_temperature/64888.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.178 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/61968.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.178 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/2m_temperature/63428.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.179 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/60508.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.179 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/total_column_water_vapour/61968.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.180 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/temperature/64888.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.180 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/66352.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.180 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/67812.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.181 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/64888.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.181 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/total_column_water_vapour/66352.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.182 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/total_column_water_vapour/64888.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.182 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/64888.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.183 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/63428.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.183 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/63428.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.183 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/temperature/67812.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.184 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/temperature/63428.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.184 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/66352.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.185 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/64888.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.185 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/total_column_water_vapour/60508.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.185 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/2m_temperature/60508.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.186 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/63428.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.186 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/temperature/60508.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.187 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/temperature/61968.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.187 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/2m_temperature/66352.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.188 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/66352.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.188 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/total_column_water_vapour/67812.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.188 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/61968.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.189 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/66352.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.190 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/temperature/66352.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.193 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/total_column_water_vapour/63428.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.221 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/60508.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.223 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/67812.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.224 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/60508.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.226 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/67812.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.227 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/61968.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]                                                             2025-06-12 13:32:34.235 | DEBUG    | earth2studio.data.utils:_make_local_details:629 - Copying /weatherbench2/datasets/era5/1959-2023_01_10-wb13-6h-1440x721_with_derived_variables.zarr/geopotential/61968.0.0.0 to local cache
    Fetching WB2 data:   0%|          | 0/42 [00:00<?, ?it/s]    Fetching WB2 data:   2%|▏         | 1/42 [00:00<00:07,  5.43it/s]    Fetching WB2 data:  19%|█▉        | 8/42 [00:00<00:01, 30.59it/s]    Fetching WB2 data:  29%|██▊       | 12/42 [00:00<00:01, 21.05it/s]    Fetching WB2 data:  36%|███▌      | 15/42 [00:01<00:04,  6.00it/s]    Fetching WB2 data:  45%|████▌     | 19/42 [00:01<00:02,  8.60it/s]    Fetching WB2 data:  52%|█████▏    | 22/42 [00:02<00:02,  9.08it/s]    Fetching WB2 data:  60%|█████▉    | 25/42 [00:02<00:01, 11.21it/s]    Fetching WB2 data:  67%|██████▋   | 28/42 [00:02<00:01, 13.68it/s]    Fetching WB2 data:  86%|████████▌ | 36/42 [00:02<00:00, 21.53it/s]    Fetching WB2 data:  93%|█████████▎| 39/42 [00:02<00:00, 21.80it/s]    Fetching WB2 data: 100%|██████████| 42/42 [00:03<00:00, 11.50it/s]    Fetching WB2 data: 100%|██████████| 42/42 [00:03<00:00, 12.16it/s]
    2025-06-12 13:32:37.743 | SUCCESS  | earth2studio.run:deterministic:106 - Fetched data from WB2ERA5
    2025-06-12 13:32:37.747 | WARNING  | earth2studio.io.zarr:add_array:192 - Datetime64 not supported in zarr 3.0, converting to int64 nanoseconds since epoch
    2025-06-12 13:32:37.752 | WARNING  | earth2studio.io.zarr:add_array:198 - Timedelta64 not supported in zarr 3.0, converting to int64 nanoseconds since epoch
    2025-06-12 13:32:37.771 | INFO     | earth2studio.run:deterministic:136 - Inference starting!

    Running inference:   0%|          | 0/21 [00:00<?, ?it/s]
    Running inference:   5%|▍         | 1/21 [00:00<00:05,  3.49it/s]
    Running inference:  10%|▉         | 2/21 [00:00<00:05,  3.49it/s]
    Running inference:  14%|█▍        | 3/21 [00:00<00:04,  3.77it/s]
    Running inference:  19%|█▉        | 4/21 [00:01<00:04,  3.70it/s]
    Running inference:  24%|██▍       | 5/21 [00:01<00:04,  3.93it/s]
    Running inference:  29%|██▊       | 6/21 [00:01<00:03,  4.01it/s]
    Running inference:  33%|███▎      | 7/21 [00:01<00:03,  4.07it/s]
    Running inference:  38%|███▊      | 8/21 [00:02<00:03,  3.92it/s]
    Running inference:  43%|████▎     | 9/21 [00:02<00:03,  3.93it/s]
    Running inference:  48%|████▊     | 10/21 [00:02<00:02,  3.83it/s]
    Running inference:  52%|█████▏    | 11/21 [00:02<00:02,  3.80it/s]
    Running inference:  57%|█████▋    | 12/21 [00:03<00:02,  3.64it/s]
    Running inference:  62%|██████▏   | 13/21 [00:03<00:02,  3.72it/s]
    Running inference:  67%|██████▋   | 14/21 [00:03<00:01,  3.69it/s]
    Running inference:  71%|███████▏  | 15/21 [00:03<00:01,  3.74it/s]
    Running inference:  76%|███████▌  | 16/21 [00:04<00:01,  3.67it/s]
    Running inference:  81%|████████  | 17/21 [00:04<00:01,  3.73it/s]
    Running inference:  86%|████████▌ | 18/21 [00:04<00:00,  3.63it/s]
    Running inference:  90%|█████████ | 19/21 [00:05<00:00,  3.69it/s]
    Running inference:  95%|█████████▌| 20/21 [00:05<00:00,  3.63it/s]
    Running inference: 100%|██████████| 21/21 [00:05<00:00,  3.68it/s]    Running inference: 100%|██████████| 21/21 [00:05<00:00,  3.75it/s]
    2025-06-12 13:32:43.377 | SUCCESS  | earth2studio.run:deterministic:146 - Inference complete
    /
    ├── lat (721,) float64
    ├── lead_time (21,) int64
    ├── lon (1440,) float64
    ├── tcwv (6, 21, 721, 1440) float32
    └── time (6,) int64





.. GENERATED FROM PYTHON SOURCE LINES 161-172

Post Processing
---------------
Finally, we can post process the results. Xarray provides a useful function for
opening multiple files as a single dataset, :py:func:`xarray.open_mfdataset`. This
allows outputs from all processes to get treated as a single data array.

.. warning::

  In this script process 0 is used to post process so the example is in one file.
  It is best practice to perform post processing in a separate job / script entirely
  to better utilize compute resources.

.. GENERATED FROM PYTHON SOURCE LINES 172-199

.. code-block:: Python


    if dist.rank == 0:
        import matplotlib.pyplot as plt
        import xarray as xr

        from earth2studio.utils.time import timearray_to_datetime

        paths = [f"outputs/08_output_{i}.zarr" for i in range(dist.world_size)]
        ds = xr.open_mfdataset(paths, combine="nested", concat_dim="time", engine="zarr")
        print(ds)

        ncols = 3
        fig, ax = plt.subplots(2, ncols, figsize=(12, 6))

        time = timearray_to_datetime(ds.coords["time"].values.astype("datetime64[ns]"))
        for i in range(6):
            ax[i // ncols, i % ncols].imshow(
                ds["tcwv"].isel(time=i, lead_time=-1).values,
                cmap="gist_earth",
                vmin=0,
                vmax=100,
            )
            ax[i // ncols, i % ncols].set_title(time[i].strftime("%m/%d/%Y"))
        plt.suptitle(
            f'TCWV Forecast Lead Time - {ds.coords["lead_time"].values[-1].astype("timedelta64[ns]").astype("timedelta64[D]").astype(int)} days'
        )
        plt.savefig("outputs/08_tcwv_distributed_manager.jpg")



.. image-sg:: /examples/images/sphx_glr_08_distributed_manager_001.png
   :alt: TCWV Forecast Lead Time - 5 days, 06/01/2000, 06/01/2001, 06/01/2002, 06/01/2003, 06/01/2004, 06/01/2005
   :srcset: /examples/images/sphx_glr_08_distributed_manager_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    <xarray.Dataset> Size: 523MB
    Dimensions:    (time: 6, lead_time: 21, lat: 721, lon: 1440)
    Coordinates:
      * lead_time  (lead_time) int64 168B 0 21600000000000 ... 432000000000000
      * time       (time) int64 48B 959817600000000000 ... 1117584000000000000
      * lat        (lat) float64 6kB 90.0 89.75 89.5 89.25 ... -89.5 -89.75 -90.0
      * lon        (lon) float64 12kB 0.0 0.25 0.5 0.75 ... 359.0 359.2 359.5 359.8
    Data variables:
        tcwv       (time, lead_time, lat, lon) float32 523MB dask.array<chunksize=(1, 1, 721, 1440), meta=np.ndarray>





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 15.338 seconds)


.. _sphx_glr_download_examples_08_distributed_manager.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 08_distributed_manager.ipynb <08_distributed_manager.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 08_distributed_manager.py <08_distributed_manager.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: 08_distributed_manager.zip <08_distributed_manager.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
